--- a/notebooks/GTFS_Format.ipynb
+++ b/notebooks/GTFS_Format.ipynb
@@ -1550,6 +1550,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating shapes.txt using mapbox direction API"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
