--- a/notebooks/GTFS_Format.ipynb
+++ b/notebooks/GTFS_Format.ipynb
@@ -944,7 +944,7 @@
     }
    ],
    "source": [
-    "#Reads through all excel sheets and extract all stops with names and coordinates\n",
+    "#Reads through all excel sheets and extract all trips\n",
     "trips=pd.DataFrame(columns=['trip_id','route_id','service_id','trip_headsign','direction_id','block_id','shape_id'])\n",
     "shape_id=0\n",
     "for route in dfSuperSet.keys():\n",
@@ -1229,7 +1229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Reads through all excel sheets and extract all stops with names and coordinates\n",
+    "#Reads through all excel sheets and extract all stops times \n",
     "stop_times=pd.DataFrame(columns=['trip_id',\t'arrival_time',\t'departure_time',\t'stop_sequence',\t'stop_head_sign',\t'shape_dist_traveled',\t'halt',\t'stop_name'])\n",
     "trip_id=0\n",
     "for route in dfSuperSet.keys():\n",
@@ -1560,7 +1560,9 @@
    "source": [
     "#Generates a list of geographical coordinates representing linestring from origin stop to destination stop\n",
     "def shape(stop_coord,next_stop_coord):\n",
-    "    x = requests.get(\"https://api.mapbox.com/directions/v5/mapbox/driving/\"+str(stop_coord[1])+\"%2C\"+str(stop_coord[0])+\"%3B\"+str(next_stop_coord[1])+\"%2C\"+str(next_stop_coord[0])+\"?alternatives=true&geometries=geojson&language=en&overview=simplified&steps=true&access_token=pk.eyJ1IjoienVscWFyYSIsImEiOiJjbGVkNWxmMDMwMzN1M3lzMmF6bGkzZm9zIn0.sabyhYfG-Oj-juPhfyWhrg\")\n",
+    "    x = requests.get(\"https://api.mapbox.com/directions/v5/mapbox/driving/\"+str(stop_coord[1])+\"%2C\"+str(stop_coord[0])+\\\n",
+    "                     \"%3B\"+str(next_stop_coord[1])+\"%2C\"+str(next_stop_coord[0])+\\\n",
+    "                    \"?alternatives=true&geometries=geojson&language=en&overview=simplified&steps=true&access_token=pk.eyJ1IjoienVscWFyYSIsImEiOiJjbGVkNWxmMDMwMzN1M3lzMmF6bGkzZm9zIn0.sabyhYfG-Oj-juPhfyWhrg\")\n",
     "    return x.json()['routes'][0]['geometry']['coordinates']\n",
     "\n"
    ]
@@ -1571,7 +1573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Reads through all excel sheets and extract all stops with names and coordinates\n",
+    "#Reads through all excel sheets and extract all shapes \n",
     "shapes=pd.DataFrame(columns=['shape_id','shape_pt_lat','shape_pt_lon','shape_pt_sequence'])\n",
     "shape_id=0\n",
     "for route in dfSuperSet.keys():\n",
